SecurityConfig was missplaced